bpo-46903: Handle str-subclasses in virtual instance dictionaries. (GH-31658)